--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -61,3 +61,82 @@
   opacity: 1;
   pointer-events: all;
 }
+
+.dropdown {
+  display: flex;
+  flex-direction: column;
+}
+
+.dropdown-btn {
+  background: none;
+  border: none;
+  color: #15803d;
+  font-size: 16px;
+  text-align: left;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+}
+
+.dropdown-menu {
+  max-height: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-left: 15px;
+  transition: max-height 0.3s ease;
+}
+
+.dropdown-menu.open {
+  max-height: 200px;
+}
+
+.dropdown-menu a {
+  font-size: 15px;
+  color: #15803d;
+  opacity: 0.85;
+}
+
+.sub-dropdown {
+  display: flex;
+  flex-direction: column;
+}
+
+.sub-dropdown-btn {
+  background: none;
+  border: none;
+  color: #15803d;
+  font-size: 15px;
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.sub-dropdown-menu {
+  max-height: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-left: 25px;
+  transition: max-height 0.3s ease;
+}
+
+.sub-dropdown-menu.open {
+  max-height: 300px;
+}
+
+.sub-dropdown-menu a {
+  font-size: 14px;
+  color: #15803d;
+  opacity: 0.85;
+}
+.all-link,
+.all-category {
+  font-weight: 600;
+  opacity: 1;
+}
