--- a/src/styles/ProductList.css
+++ b/src/styles/ProductList.css
@@ -1,8 +1,7 @@
 .product-list {
-  padding: 100px 7%;
+  padding: 50px 7%;
   background: #f6f7f9;
   min-height: 100vh;
-  text-align: center;
 }
 .back-btn {
   background: none;
@@ -11,7 +10,6 @@
   color: #0f2c44;
   font-weight: 600;
   cursor: pointer;
-  margin-bottom: 30px;
   transition: opacity 0.3s ease;
 }
 
@@ -23,6 +21,7 @@
   font-weight: 800;
   color: #0f2c44;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .range {
@@ -100,6 +99,9 @@
 }
 .range-section {
   margin-bottom: 90px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  padding: 20px;
 }
 
 .range-header {
